--- a/build.gradle
+++ b/build.gradle
@@ -52,5 +52,7 @@ sonarqube {
 		property 'encoding', 'UTF-8'
 		property 'charSet', 'UTF-8'
 		property 'sonar.qualitygate.wait', true
+		property 'sonar.branch.name', 'refactor'
+		property 'sonar.branch.target', 'main'
 	}
 }
